vlib/v/checker/tests/array_insert_prepend_args_err.out
vlib/v/checker/tests/array_insert_prepend_args_err.vv:8:13: error: `array.insert()` should have 2 arguments, e.g. `insert(1, val)`
    6 | fn main() {
    7 |     tree := Node{}
    8 |     tree.child.insert(Node{})
      |                ~~~~~~~~~~~~~~
    9 |     tree.child.insert(2.1, Node{})
   10 |     tree.child.insert('abc', Node{})
vlib/v/checker/tests/array_insert_prepend_args_err.vv:9:20: error: the first argument of `array.insert()` should be integer
    7 |     tree := Node{}
    8 |     tree.child.insert(Node{})
    9 |     tree.child.insert(2.1, Node{})
      |                       ~~~
   10 |     tree.child.insert('abc', Node{})
   11 |     tree.child.insert(Node{}, 2)
vlib/v/checker/tests/array_insert_prepend_args_err.vv:10:20: error: the first argument of `array.insert()` should be integer
    8 |     tree.child.insert(Node{})
    9 |     tree.child.insert(2.1, Node{})
   10 |     tree.child.insert('abc', Node{})
      |                       ~~~~~
   11 |     tree.child.insert(Node{}, 2)
   12 |     tree.child.prepend()
vlib/v/checker/tests/array_insert_prepend_args_err.vv:11:20: error: the first argument of `array.insert()` should be integer
    9 |     tree.child.insert(2.1, Node{})
   10 |     tree.child.insert('abc', Node{})
   11 |     tree.child.insert(Node{}, 2)
      |                       ~~~~~~
   12 |     tree.child.prepend()
   13 | }
vlib/v/checker/tests/array_insert_prepend_args_err.vv:12:13: error: `array.prepend()` should have 1 argument, e.g. `prepend(val)`
   10 |     tree.child.insert('abc', Node{})
   11 |     tree.child.insert(Node{}, 2)
   12 |     tree.child.prepend()
      |                ~~~~~~~~~
   13 | }
