vlib/v/checker/tests/array_insert_prepend_args_err.vv
struct Node {
mut:
	child []Node
}

fn main() {
	tree := Node{}
	tree.child.insert(Node{})
	tree.child.insert(2.1, Node{})
	tree.child.insert('abc', Node{})
	tree.child.insert(Node{}, 2)
	tree.child.prepend()
}
